# link_scraper

./: Cargo.toml  README.md
assets/examples/docx/: demo.docx
assets/examples/pdf/: test.txt
assets/examples/rtf/: file-sample_1MB.rtf  sample1.rtf
assets/examples/xlsx/: sample2.xlsx  zeitmomo2.xlsx  zeitmomoRestricted.xlsx
assets/examples/xml/: test.xml
src/: any_format_scraper.rs  error.rs  generic_link_extractor.rs  helpers.rs  lib.rs  link_extractor.rs  link_scraper.rs  parser.rs  pdf.rs  websites.rs
src/formats/: compressed_formats_common.rs  docx.rs  image.rs  mod.rs  odf.rs  ooxml.rs  pdf.rs  plaintext.rs  raw_text.rs  rtf.rs  text_file.rs  websites.rs  xlink.rs  xml.rs
src/formats/docx/: mod.rs
src/formats/odf/: mod.rs
src/formats/odt/: mod.rs
src/formats/ooxml/: mod.rs
src/formats/pdf/: mod.rs  pdf_operator.rs
src/formats/xlink/: elements.rs  mod.rs
src/formats/xml/: mod.rs  svg.rs
src/formats/xml/xlink/: elements.rs  mod.rs
test_files/odf/: odp_test.odp  ods_test.ods  odt_test.odt  ott_test.ott
test_files/odp/: test.odp
test_files/ods/: test.ods
test_files/odt/: test.odt
test_files/ooxml/: docx_test.docx  pptx_test.pptx  xlsx_test.xlsx
test_files/pptx/: test.pptx
test_files/rtf/: rtf_test.rtf
test_files/xml/: dtd_test.xml  xlink_test.xml  xml_test.xml
