[package]
name = "link_scraper"
version = "0.1.0"
edition = "2021"
exclude = ["test_files/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.33"
log = "0.4.21"
itertools = "0.12.1"
thiserror = "1.0.58"
anyhow = "1.0.81"
lazy_static = "1.4.0"
linkify = { version = "0.10.0"}
mupdf = { version = "0.4.2", optional = true }
zip = { version = "0.6.6", optional = true }
xml-rs = { version = "0.8.19", optional = true }
rtf-parser = { version = "0.2.0", optional = true }
infer = { version = "0.15.0", optional = true }

[features]
default = ["any_format"]
pdf = ["dep:mupdf"]
text_file = []
xml = ["dep:xml-rs"]
xlink = ["dep:xml-rs"]
svg = ["xml"]
ooxml = ["dep:xml-rs", "dep:zip"]
odf = ["dep:xml-rs", "dep:zip"]
rtf = ["dep:rtf-parser"]
any_format = ["dep:infer"]

