[package]
name = "link_scraper"
version = "0.1.0"
edition = "2021"
exclude = ["test_files/"]
readme = "README.md"
license = "AGPL-3" # I would like to use a less restrictive license, but unfortunately I cannot find an alternative to the mupdf-crate which uses the same license.
description = "Scrape links from any document-file format"
repository = "https://github.com/LukasPieger1/link_scraper"
homepage = "https://github.com/LukasPieger1/link_scraper"
keywords = ["link", "links", "hyperlink", "hyperlinks", "scrape", "file", "files", "txt", "pdf", "docx", "pptx", "xlsx", "odp", "ods", "ott", "rtf", "xml", "svg", "xlink", "jpg", "png", "webp", "tiff", "heif"]
categories = ["encoding", "filesystem", "parser-implementations", "text-processing"]

[dependencies]
itertools = "0.13.0" # MIT or Apache-2.0
thiserror = "1.0.58" # MIT or Apache-2.0
linkify = { version = "0.10.0"} # MIT or Apache-2.0
mupdf = { version = "0.4.2", optional = true } # AGPL-3.0
zip = { version = "2.1.3", optional = true } # MIT
xml-rs = { version = "0.8.20", optional = true } # MIT
rtf-parser = { version = "0.3.0", optional = true } # MIT
infer = { version = "0.16.0", optional = true } # MIT
kamadak-exif = { version = "0.5.5", optional = true} # BSD-2-Clause

[features]
default = ["any_format", "text_file"]
text_file = []
pdf = ["dep:mupdf"]
xml = ["dep:xml-rs"]
xlink = ["dep:xml-rs"]
svg = ["xml"]
ooxml = ["dep:xml-rs", "dep:zip"]
odf = ["dep:xml-rs", "dep:zip"]
rtf = ["dep:rtf-parser"]
image = ["dep:kamadak-exif"]
any_format = ["dep:infer"]